# qweather

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  bitshift.weather.desktop  build.py  install_cmake.sh  org.kde.hellokirigami.desktop  references.txt  requirements.sh  run_desktop.sh  run_mobile.sh  weather.pro
android/: AndroidManifest.xml
res/: database.json  res.qrc  stations.json
src/: CMakeLists.txt  database.cpp  database.h  fileio.cpp  fileio.h  forecastmodel.cpp  forecastmodel.h  main.cpp  places.cpp  places.h  qml.qrc  radarimage.cpp  radarimage.h  resources.qrc  settings.cpp  settings.h  stations.cpp  stations.h  weather.cpp  weather.h
src/contents/ui/: MainPage.qml  main.qml
src/qftp/: qftp.cpp  qftp.h
src/qml/: Current.qml  Divider.qml  Forecast.qml  ForecastDelegate.qml  GraphicForecast.qml  MainPage.qml  Radar.qml  SearchPage.qml  SettingsPage.qml  Today.qml  WeatherPage.qml  main.qml  util.js
src/qml/Style/: Button.qml  Style.qml  Theme.qml  ThemeDark.qml  ThemeLight.qml
